@@ -2361,6 +2361,8 @@ void CPartFile::CompleteFileEnded(int completing_result, wxString* newname) {
 		AddLogLineM(true, wxString::Format(_("WARNING: Failed to delete %s.seeds\n"), m_partmetfilename.c_str()));
 	}	
 
+	theApp.downloadqueue->SetCompletedFilesExist();
+	Notify_0_ValEvent(DLOAD_UPDATE_COMPLETED);
 	
 	AddLogLineM(true, wxString::Format(_("Finished downloading %s :-)"), GetFileName().c_str()));
 	Notify_ShowNotifier(wxString(_("Downloaded:"))+wxT("\n")+GetFileName(), TBN_DLOAD, 0);
